--- a/index.qmd
+++ b/index.qmd
@@ -7,3 +7,7 @@ editor: visual
 ## Olá,   essa é a minha página de nº1, faz parte da atividade :)
 
 espero que dê certo!
+
+se quiser visitar minha página 2: <https://amandabaauer.github.io/pagina2>
+
+e a página 3: <https://amandabaauer.github.io/pagina3>
