--- a/index.qmd
+++ b/index.qmd
@@ -11,3 +11,5 @@ espero que dê certo!
 se quiser visitar minha página 2: <https://amandabaauer.github.io/pagina2>
 
 e a página 3: <https://amandabaauer.github.io/pagina3>
+
+\[clique aqui\] (pagina2)
