--- a/index.qmd
+++ b/index.qmd
@@ -13,4 +13,4 @@ se quiser visitar minha página 2: <https://amandabaauer.github.io/pagina2>
 
 e a página 3: <https://amandabaauer.github.io/pagina3>
 
-\[clique aqui\](pagina2)
+\[clique aqui\](pagina2.html)
