--- a/pagina2.qmd
+++ b/pagina2.qmd
@@ -10,3 +10,5 @@ Caso você ainda não tenha visitado a página 1, recomendo você começar lá! 
 <https://amandabaauer.github.io/>
 
 Ou, se já visitou e quiser prosseguir: <https://amandabaauer.github.io/pagina3>
+
+oioio
