--- a/index.qmd
+++ b/index.qmd
@@ -14,4 +14,6 @@ se quiser visitar minha página 2: <https://amandabaauer.github.io/pagina2>
 
 e a página 3: <https://amandabaauer.github.io/pagina3>
 
-[clique aqui](pagina2.html)
+[Página 2](pagina2.html)
+
+[teste](C:/Users/amand/Desktop/Pendentes/Análises CAP3/1907n/C13 vs fisio.jpeg)
