--- a/index.qmd
+++ b/index.qmd
@@ -1,19 +1,12 @@
 ---
-title: "Essa é a minha primeira pagina"
+title: "Tarefa 1 - Reprodutibilidade"
 format: html
 editor: visual
 ---
 
-llkk
+## Seja bem vindo(a) :)
 
-## Olá, essa é a minha página de nº1, faz parte da atividade :)
+Essa é minha primeira página. Nela, vou contar um pouco sobre mim. Caso queira saber mais sobre meu pet, você pode visitar minha [segunda página](pagina2.html), caso você queira saber mais sobre a cidade de onde eu vim, leia sobre [Picada Café](pagina3.html). 
 
-espero que dê certo!
-
-se quiser visitar minha página 2: <https://amandabaauer.github.io/pagina2>
-
-e a página 3: <https://amandabaauer.github.io/pagina3>
-
-[Página 2](pagina2.html)
 
 ![](images/IMG_0401.JPG){width="309"}
