--- a/index.qmd
+++ b/index.qmd
@@ -13,4 +13,4 @@ Caso queira saber mais sobre meu pet, você pode visitar minha [segunda página]
 
 ![](images/IMG_0401.JPG){width="309"}
 
-Prazer, meu nome é Amanda Letícia Bauer, nasci em 1998 em uma pequena cidade.
+Prazer, meu nome é Amanda Letícia Bauer, nasci em 1998 em uma pequena cidade. Desde pequena, sempre fui muito aventureira e entusiasta da natureza. Criando sapos, "descrevendo" espécies de formigas pelo fenótipo e com 3 anos, afirmava que seria bióloga. 
