--- a/pagina3.qmd
+++ b/pagina3.qmd
@@ -1,10 +1,10 @@
 ---
-title: "Picada Café"
+title: "Projeto de Doutorado"
 format: html
 editor: visual
 ---
 
-## Picada Café
+## Doutorado em Biologia de Ambientes Aquáticos Continentais
 
-Se você apareceu aqui, e quiser começar "pelo começo", conto um pouco da [minha história](pagina2.html) e sobre o [meu pet](pagina3.html). 
+Se você apareceu aqui, e quiser começar "pelo começo", conto um pouco da [minha história](pagina2.html) e sobre [minhas pesquisas anteriores](pagina3.html). 
 
