--- a/pagina3.qmd
+++ b/pagina3.qmd
@@ -10,3 +10,5 @@ Se você apareceu aqui, e quiser começar "pelo começo", conto um pouco da [min
 
 O projeto de tese ainda está em planejamento, discussões e rearranjos. 
 
+Um dos capítulos no qual estou trabalhando agora, é a respeito da resposta isotópica de peixes em relação a diferentes matrizes na paisagem (matriz urbana, arenosa, com pinus e 'normal'). 
+
