--- a/pagina3.qmd
+++ b/pagina3.qmd
@@ -11,3 +11,9 @@ Se você apareceu aqui, e quiser começar "pelo começo", conto um pouco da [min
 O projeto de tese ainda está em planejamento, discussões e rearranjos.
 
 Um dos capítulos no qual estou trabalhando agora, é a respeito da resposta isotópica de peixes em relação a diferentes matrizes na paisagem (matriz urbana, arenosa, com pinus e 'normal').
+
+library(knitr)
+
+library(knitr)
+kable(aularepro.csv[1:5, 1:3], caption = "Exemplo de Tabela")
+
