--- a/pagina3.qmd
+++ b/pagina3.qmd
@@ -11,21 +11,13 @@ Se você apareceu aqui, e quiser começar "pelo começo", conto um pouco da [min
 O projeto de tese ainda está em planejamento, discussões e rearranjos.
 
 Um dos capítulos no qual estou trabalhando agora, é a respeito da resposta isotópica de peixes em relação a diferentes matrizes na paisagem (matriz urbana, arenosa, com pinus e 'normal').
+ 
+```{r}
+dados= read.table("clipboard",h=T)
 
-+---------------+---------------+--------------------+
-| Fruit         | Price         | Advantages         |
-+===============+===============+====================+
-| Bananas       | $1.34         | - built-in wrapper |
-|               |               | - bright color     |
-+---------------+---------------+--------------------+
-| Oranges       | $2.10         | - cures scurvy     |
-|               |               | - tasty            |
-+---------------+---------------+--------------------+
-
-: Sample grid table.
-
-
-
+library(knitr)
+kable(dados, caption = "Minha Tabela do CSV")
+```
 
 Como precisa colocar uma fórmula, escolhi a mais clássica. A de Bhaskara: 
 $$x = \frac{-b \pm \sqrt{b^2 - 4ac}}{2a}$$
