--- a/pagina3.qmd
+++ b/pagina3.qmd
@@ -6,9 +6,9 @@ editor: visual
 
 ## Doutorado em Biologia de Ambientes Aquáticos Continentais
 
-Se você apareceu aqui, e quiser começar "pelo começo", conto um pouco da [minha história](amandabaauer.github.io) e sobre [minhas pesquisas anteriores](https://amandabaauer.github.io/apresentacao.html).
+Se você apareceu aqui, e quiser começar "pelo começo", conto um pouco da [minha história](amandabaauer.github.io) e sobre [minhas pesquisas anteriores] (https://amandabaauer.github.io/pagina2).
 
-O projeto de tese ainda está em planejamento, discussões e rearranjos.Uma breve explanação você pode encontrar [aqui](apresentacao.qmd) 
+O projeto de tese ainda está em planejamento, discussões e rearranjos.Uma breve explanação você pode encontrar [aqui](https://amandabaauer.github.io/apresentacao.html) 
 
 Um dos capítulos no qual estou trabalhando agora, é a respeito da resposta isotópica de peixes em relação a diferentes matrizes na paisagem (matriz urbana, arenosa, com pinus e 'normal').
 
