--- a/pagina3.qmd
+++ b/pagina3.qmd
@@ -6,7 +6,7 @@ editor: visual
 
 ## Doutorado em Biologia de Ambientes Aquáticos Continentais
 
-Se você apareceu aqui, e quiser começar "pelo começo", conto um pouco da [minha história](amandabaauer.github.io) e sobre [minhas pesquisas anteriores] (https://amandabaauer.github.io/pagina2).
+Se você apareceu aqui, e quiser começar "pelo começo", conto um pouco da [minha história](amandabaauer.github.io) e sobre [minhas pesquisas anteriores] (https://amandabaauer.github.io/pagina2.html).
 
 O projeto de tese ainda está em planejamento, discussões e rearranjos.Uma breve explanação você pode encontrar [aqui](https://amandabaauer.github.io/apresentacao.html) 
 
