--- a/Tarefa3/Tarefa3.Rmd
+++ b/Tarefa3/Tarefa3.Rmd
@@ -1,9 +1,10 @@
 ---
-title: Short Paper
+title: RESIDÊNCIA E MOVIMENTAÇÃO: HÁ ALGUM PADRÃO PARA PEIXES 
+EM RIACHO DE CABECEIRA?
 author:
-  - name: Alice Anonymous
-    email: alice@example.com
-    affiliation: Some Institute of Technology
+  - name: Amanda Letícia Bauer
+    email: amandaleticiabauer@hotmail.com
+    affiliation: Laboratório de Ictiologia - FURG
     correspondingauthor: true
     footnote: 1
   - name: Bob Security
@@ -38,7 +39,6 @@ footnote:
     text: "Another author footnote."
 abstract: |
   This is the abstract.
-
   It consists of two paragraphs.
 keywords: 
   - keyword1
@@ -50,53 +50,48 @@ numbersections: true
 bibliography: mybibfile.bib
 biblio-style: elsarticle-harv # author year style for natbib - use 'elsarticle-num' or 'elsarticle-num-names' for numbered scheme
 classoption: preprint, 3p, authoryear # remove authoryear is not using `elsarticle-harv`
-# Use a CSL with `citation_package = "default"`
 # csl: https://www.zotero.org/styles/elsevier-harvard
 output: 
   rticles::elsevier_article:
     keep_tex: true
     citation_package: natbib
+editor_options: 
+  markdown: 
+    wrap: 72
 ---
 
-Please make sure that your manuscript follows the guidelines in the 
-Guide for Authors of the relevant journal. It is not necessary to 
-typeset your manuscript in exactly the same way as an article, 
-unless you are submitting to a camera-ready copy (CRC) journal.
+Please make sure that your manuscript follows the guidelines in the Guide for Authors of the relevant journal. It is not necessary to typeset your manuscript in exactly the same way as an article, unless you are submitting to a camera-ready copy (CRC) journal.
 
-For detailed instructions regarding the elsevier article class, see   <https://www.elsevier.com/authors/policies-and-guidelines/latex-instructions>
+For detailed instructions regarding the elsevier article class, see <https://www.elsevier.com/authors/policies-and-guidelines/latex-instructions>
 
 # Bibliography styles
 
-Here are two sample references: @Feynman1963118 [@Dirac1953888].
+Here are two sample references: [@Feynman1963118; @Dirac1953888].
 
-By default, natbib will be used with the `authoryear` style, set in `classoption` variable in YAML and with `elsearticle-harv.bst` which is among provided style by `elsarticle` documentclass. Other available style are `elsarticle-num.bst` and `elsarticle-num-names.bst` — the first one can be used for the numbered scheme, second one for numbered with new options of natbib.sty. 
+By default, natbib will be used with the `authoryear` style, set in `classoption` variable in YAML and with `elsearticle-harv.bst` which is among provided style by `elsarticle` documentclass. Other available style are `elsarticle-num.bst` and `elsarticle-num-names.bst` — the first one can be used for the numbered scheme, second one for numbered with new options of natbib.sty.
 
-You can sets extra options with `natbiboptions` variable in YAML header. Example 
-```yaml
+You can sets extra options with `natbiboptions` variable in YAML header. Example
+
+``` yaml
 natbiboptions: longnamesfirst,angle,semicolon
 ```
 
-There are various more specific bibliography styles available at
-<https://support.stmdocs.in/wiki/index.php?title=Model-wise_bibliographic_style_files>. 
-To use one of these, add it in the header using, for example, `biblio-style: model1-num-names`.
+There are various more specific bibliography styles available at <https://support.stmdocs.in/wiki/index.php?title=Model-wise_bibliographic_style_files>. To use one of these, add it in the header using, for example, `biblio-style: model1-num-names`.
 
-## Using CSL 
+## Using CSL
 
-If `citation_package` is set to `default` in `elsevier_article()`, then pandoc is used for citations instead of `natbib`. In this case, the `csl` option is used to format the references. Alternative `csl` files are available from <https://www.zotero.org/styles?q=elsevier>. These can be downloaded
-and stored locally, or the url can be used as in the example header.
+If `citation_package` is set to `default` in `elsevier_article()`, then pandoc is used for citations instead of `natbib`. In this case, the `csl` option is used to format the references. Alternative `csl` files are available from <https://www.zotero.org/styles?q=elsevier>. These can be downloaded and stored locally, or the url can be used as in the example header.
 
 # Equations
 
-Here is an equation:
-$$ 
+Here is an equation: $$ 
   f_{X}(x) = \left(\frac{\alpha}{\beta}\right)
   \left(\frac{x}{\beta}\right)^{\alpha-1}
   e^{-\left(\frac{x}{\beta}\right)^{\alpha}}; 
   \alpha,\beta,x > 0 .
 $$
 
-Here is another:
-\begin{align}
+Here is another: \begin{align}
   a^2+b^2=c^2.
 \end{align}
 
@@ -120,5 +115,4 @@ knitr::kable(head(mtcars)[,1:4],
 )
 ```
 
-# References {-}
-
+# References {.unnumbered}
