--- a/index.qmd
+++ b/index.qmd
@@ -13,3 +13,5 @@ Essa é minha primeira página, que faz parte da disciplina de Reprodutibilidade
 Prazer, meu nome é Amanda Letícia Bauer, nasci em 1998 em uma pequena cidade. Desde pequena, sempre fui muito aventureira e entusiasta da natureza. Criando sapos, "descrevendo" espécies de formigas pelo fenótipo e com 3 anos, afirmava que seria bióloga. Em 2016, ingressei na universidade para continuar minha afirmação de infância. Me formei em Licenciatura em Ciências Biológicas, em 2021. Realizei o Mestrado em Biologia na mesma universidade (Universidade do Vale do Rio dos Sinos), com término em 2023.
 
 Caso queira saber mais sobre minhas pesquisas, você pode visitar minha [segunda página](pagina2.html), caso você queira saber mais sobre o [projeto de doutorado](pagina3.html) que está em andamento, está convidado. Vem comigo :)
+
+Além disso, que tal ler uma pesquisa minha? [CLIQUE AQUI] (Untitled.Rmd)
