--- a/Untitled/Untitled.Rmd
+++ b/Untitled/Untitled.Rmd
@@ -1,7 +1,7 @@
 ---
 title: Short Paper
 author:
-  - name: Alice Anonymous
+  - name: Amanda Letícia Bauerw
     email: alice@example.com
     affiliation: Some Institute of Technology
     correspondingauthor: true
@@ -58,8 +58,7 @@ output:
     citation_package: natbib
 ---
 
-library(tinytex)
-Please make sure that your manuscript follows the guidelines in the Guide for Authors of the relevant journal. It is not necessary to typeset your manuscript in exactly the same way as an article, unless you are submitting to a camera-ready copy (CRC) journal.
+library(tinytex) Please make sure that your manuscript follows the guidelines in the Guide for Authors of the relevant journal. It is not necessary to typeset your manuscript in exactly the same way as an article, unless you are submitting to a camera-ready copy (CRC) journal.
 
 For detailed instructions regarding the elsevier article class, see <https://www.elsevier.com/authors/policies-and-guidelines/latex-instructions>
 
