--- a/Untitled/Untitled.tex
+++ b/Untitled/Untitled.tex
@@ -122,11 +122,12 @@ authoryear]{elsarticle} %review=doublespace preprint=single 5p=2 column
 \begin{frontmatter}
 
   \title{Short Paper}
-    \author[Some Institute of Technology]{Alice Anonymous%
+    \author[Laboratório de Ictiologia - FURG]{Amanda Letícia Bauer%
   \corref{cor1}%
   \fnref{1}}
-   \ead{alice@example.com} 
-    \author[Another University]{Bob Security%
+   \ead{amandaleticiabauer@hotmail.com} 
+    \author[Universidade do Vale do Rio dos Sinos - UNISINOS]{Gabriela
+Buzlarf%
   %
   }
    \ead{bob@example.com} 
