--- a/Untitled/Untitled.tex
+++ b/Untitled/Untitled.tex
@@ -122,20 +122,22 @@ authoryear]{elsarticle} %review=doublespace preprint=single 5p=2 column
 \begin{frontmatter}
 
   \title{Short Paper}
-    \author[Laboratório de Ictiologia - FURG]{Amanda Letícia Bauer%
+    \author[Laboratório de Ictiologia - Universidade Federal do Rio
+Grande FURG]{Amanda Letícia Bauer%
   \corref{cor1}%
   \fnref{1}}
    \ead{amandaleticiabauer@hotmail.com} 
-    \author[Universidade do Vale do Rio dos Sinos - UNISINOS]{Gabriela
-Buzlarf%
+    \author[Laboratório de Ecologia de Peixes - Universidade do Vale do
+Rio dos Sinos UNISINOS]{Gabriela Buzlarf%
   %
   }
    \ead{bob@example.com} 
-    \author[Another University]{Cat Memes%
+    \author[Another University]{Kelly Correia de Lima%
   %
   \fnref{2}}
    \ead{cat@example.com} 
-    \author[Some Institute of Technology]{Derek Zoolander%
+    \author[Laboratório de Ecologia de Peixes - Universidade do Vale do
+Rio dos Sinos UNISINOS]{Derek Zoolander%
   %
   \fnref{2}}
    \ead{derek@example.com} 
