--- a/index.qmd
+++ b/index.qmd
@@ -14,4 +14,4 @@ Prazer, meu nome é Amanda Letícia Bauer, nasci em 1998 em uma pequena cidade. 
 
 Caso queira saber mais sobre minhas pesquisas, você pode visitar minha [segunda página](pagina2.html), caso você queira saber mais sobre o [projeto de doutorado](pagina3.html) que está em andamento, está convidado. Vem comigo :)
 
-Além disso, que tal ler uma pesquisa minha? [CLIQUE AQUI] (C:/Users/amand/Desktop/Bauer, Amanda/3 Doutorado em Biologia/Disciplinas/Reprodutibilidade/aula/amandabaauer.github.io/Untitled/Untitled.Rmd)
+Além disso, que tal ler uma pesquisa minha? \[CLIQUE AQUI\] (<https://github.com/amandabaauer/amandabaauer.github.io/blob/main/Untitled/Untitled.pdf>)
