--- a/apresentacao.qmd
+++ b/apresentacao.qmd
@@ -144,7 +144,7 @@ data: riq by fisio
 
 ![](images/clipboard-2290428943.png)
 
-# ^OBRIGADA\ PELA\ ATENÇÃO!^
+# ^OBRIGADA PELA ATENÇÃO!^
 
 amandaleticiabauer\@hotmail.com
 
